--- a/PasoSeguro/app/src/main/AndroidManifest.xml
+++ b/PasoSeguro/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
 
     <application
         android:allowBackup="true"
-        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -34,6 +33,12 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="gtUrodDDuFstbcyGN9gkyBGTDliHmtk5ADsMzGjH" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="3rKd6641H0J5ILak2yPUiIBmOjsQxtc3PlYODIWG" />
 
         <activity
             android:name=".MapActivity"
@@ -52,5 +57,6 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
