--- a/PasoSeguro/app/src/main/AndroidManifest.xml
+++ b/PasoSeguro/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name="com.parse.CLIENT_KEY"
             android:value="3rKd6641H0J5ILak2yPUiIBmOjsQxtc3PlYODIWG" />
 
+        <!--
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
@@ -37,6 +38,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        -->
         <activity
             android:name=".MapActivity"
             android:label="@string/title_activity_map">
@@ -54,7 +56,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                  <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
