--- a/PasoSeguro/app/src/main/AndroidManifest.xml
+++ b/PasoSeguro/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo2"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -32,16 +32,7 @@
             android:name="com.parse.CLIENT_KEY"
             android:value="3rKd6641H0J5ILak2yPUiIBmOjsQxtc3PlYODIWG" />
 
-        <!--
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        -->
+
         <activity
             android:name=".MapActivity"
             android:label="@string/title_activity_map">
