--- a/PasoSeguro/app/src/main/AndroidManifest.xml
+++ b/PasoSeguro/app/src/main/AndroidManifest.xml
@@ -21,9 +21,17 @@
         <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
         <uses-permission android:name="android.permission.INTERNET" />
 
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
+
+        <!--
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDS4inLyixDSS-1pwnp3rvwjdJ-esUL3Og" />
+        -->
         <!--
             <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -104,6 +112,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MapActivity" />
         </activity>
         <activity
             android:name=".CustomFilterActivity"
