--- a/PasoSeguro/app/src/main/AndroidManifest.xml
+++ b/PasoSeguro/app/src/main/AndroidManifest.xml
@@ -159,13 +159,15 @@
 
         <activity
             android:name=".DangerZoneActivity"
-            android:label="@string/title_activity_danger_zone">
+            android:label="Zonas peligrosas">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MapActivity" />
         </activity>
     </application>
 
