--- a/PasoSeguro/app/src/main/AndroidManifest.xml
+++ b/PasoSeguro/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".PasoSeguro"
@@ -21,23 +21,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
 
         <!-- Key s4 -->
         <!--
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyB__rB8u7d0bqx_Vf0VhMoS1Z_SkIQfIkQ" />
-             -->
+        -->
         <!--
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBBg5f5EUndw5OM0Qg5mLRl8A-lM71nn_w" />
-       -->
+        -->
+
 
         <!--
         <meta-data
@@ -154,9 +153,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MapActivity" />
-
         </activity>
-
         <activity
             android:name=".DangerZoneActivity"
             android:label="Zonas peligrosas">
@@ -165,6 +162,19 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MapActivity" />
+        </activity>
+        <activity android:name=".AlarmActivity"
+            android:label="Configurar alarma">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MapActivity" />
